fixed typo in welcome.html

--- a/windows/welcome.html
+++ b/windows/welcome.html
@@ -22,7 +22,7 @@
         </div>
         <div class="content">
           <div class="title"><h3>Welcome to </h3><h2>IlayOS</h2></div>
-          <p>Explore my work and expereinces in the tech field. <br/>To navigate this page, use the following tools:</p>
+          <p>Explore my work and experiences in the tech field. <br/>To navigate this page, use the following tools:</p>
           <br/>
           <p>
             -<mark>Double click</mark> on <mark class="shorts">shortcuts</mark> to open new windows <img src="/assets/shortcuts/aboutme.png"> <br/>
