Added updatedScaleFactor to main.js and root variable inside styles.css to scale everything according to user screen size

--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
     <title>Ilay</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/shortcuts.css">
+    <link rel="icon" type="image/xicon" href="/assets/shortcuts/starticon-1.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="windows-frame">
+    <div id="windows-frame">  
       <div class="essentials">
-        <footer class="toolbar">
-          <div class="button-container">
-            <button id="start"><img src="./assets/shortcuts/starticon-1.png"><strong>Start</strong></button>
-            <button id="close-all"><img src="./assets/shortcuts/closeall.png"><strong>Close All</strong></button>
-          </div>
-        </footer>
-
         <div class="shortcuts">
           <div class="shortcuts-col-1">
             <div class="shortcut">
@@ -70,11 +65,15 @@
               <p>Credits</p>
             </div>
           </div>
+        </div>
       </div>
     </div>
-    
-
-    </div>
+    <footer class="toolbar">
+          <div class="button-container">
+            <button id="start"><img src="./assets/shortcuts/starticon-1.png"><strong>Start</strong></button>
+            <button id="close-all"><img src="./assets/shortcuts/closeall.png"><strong>Close All</strong></button>
+          </div>
+        </footer>
     <script src="main.js"></script>
   </body>
 </html>
