--- a/windows/sweprojects/bytes.html
+++ b/windows/sweprojects/bytes.html
@@ -36,7 +36,7 @@
               -Github for team collaboration and scalability
             </p>
           </div>
-          <a class="spark-photos">Click Here for Photos!</a>
+          <a class="spark-photos" href="https://drive.google.com/drive/folders/1TT3N75eaueIfw1J0l5cvD7gTnwDav2Ow?usp=sharing" target="_blank" rel="noopener noreferrer">Click Here for Photos!</a>
           <div class="selector-ui">
             <div class="page-selectors">
               <img class="page-selector" src="/assets/aiprojects/leftarrow.PNG">
