Fixed outer window border to have more depth, reflective of my original figma drafts

--- a/windows/aiprojects/astar.html
+++ b/windows/aiprojects/astar.html
@@ -17,11 +17,8 @@
       </div>
       <div class="Inner-window">
         <div class="media">
-          <div style="width: 140; height: 80; background-color: antiquewhite;  margin-top: 30px;
-  margin-bottom: 20px;">Video coming soon...</div>
-          
+          <img src="/assets/aiprojects/pacmangif.gif" class="tetris-sc">
           <a href="https://github.com/ilayG2004/immortal-pacman-ai" target="_blank" rel="noopener noreferrer">GitHub Link</a>
-          <img class="astar-img" src="/assets/aiprojects/pacmansc.PNG">
         </div>
         <div class="content">
           <p class="p-slightly-bigger">
