--- a/windows/aiprojects/citybudget.html
+++ b/windows/aiprojects/citybudget.html
@@ -26,7 +26,7 @@
         </div>
         <div class="content">
           <p class="p-bigger">
-            <a>Full description of project found under its Fullstacks Project Page</a> <br/> <br/>
+            Full description of project found under its Fullstacks Project Page<br/> <br/>
             Original data-engineering & ML related visualizations are found under the 'visualizations' tab of the repo. 
             These functions were ported over from their respective ipynb files into the Flask backend for our later web-app development.
           </p>
