Added video demo from Syngin project last summer to SWE Projects Window

--- a/windows/sweprojects/synginwork.html
+++ b/windows/sweprojects/synginwork.html
@@ -17,11 +17,12 @@
       </div>
       <div class="Inner-window">
         <div class="media">
-         
+         <iframe src="https://drive.google.com/file/d/1tL_2lFlSaqNmZhcC0wvC7qVhe59QopzW/preview" width="140" height="80" allow="autoplay" allowfullscreen></iframe>
         </div>
         <div class="content">
           <p class="p-slightly-bigger">
-            Attached is a frontend demonstration of the work I did at Syngin Technologies this summer. While I could not film any code (for obvious privacy reasons), I could film the features which utilized it. The new database I set up had to be connected to Salesforce so that our transportation, IT, and sales teams could view data on vehicle deliveries on a case-by-case basis. Screenshots coming soon...
+            Attached is a frontend demonstration of the work I did at Syngin Technologies this summer. While I could not film any code (for obvious privacy reasons), I could film the features which utilized it. The new database I set up had to be connected to Salesforce so that our transportation, IT, and sales teams could view data on vehicle deliveries on a case-by-case basis. The video shown demonstrates my Salesforce LWC querying and pulling information from our new Azure Blob Storage database, to generate a list of photos related to the case for our teams to view, copy, and download.
+            The PDF shown is the new proof-of delivery design I created, which also pulls pick-up and delivery photos, as well as a diagram of damages to the vehicle, and keys if provided.
           </p>
           <div class="tech-used">
             <h5>Tech Used:</h5>
