Fixed aboutme typo

--- a/windows/aboutme.html
+++ b/windows/aboutme.html
@@ -28,7 +28,7 @@
 I am a senior computer science student at Boston University. 
 <br/>
 <br/>
-I like to spend my time working on creative and cutting edges projects. When I'm not coding, you can catch me fishing, hiking, or watching the Knicks game.</p>
+I like to spend my time working on creative and cutting edge projects. When I'm not coding, you can catch me fishing, hiking, or watching the Knicks game.</p>
       </div>
     </div>
   </body>
